--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "^1.6.6",
     "angular-material-data-table": "^0.10.10",
     "angular-pdfjs-viewer": "^0.8.1",
-    "ng-disable-scroll": "^0.1.1"
+    "ng-disable-scroll": "^0.1.1",
+    "angular-local-storage": "^0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.2"
